a small and gentle push

--- a/GalaX/board/templates/board/repost_event_card.html
+++ b/GalaX/board/templates/board/repost_event_card.html
@@ -20,15 +20,23 @@
         <h5 class="card-title event-name">
           <!-- Name here -->
         </h5>
-        <div class="rounded border border-secondary m-1">
-          <!-- clearfix to allow stopping consecutive text to be around -->
-          <div class="event-repost clearfix">
+        <div class="card">
+          <div class="event-repost row no-gutters">
             <!-- image -->
-            <img class="card-profile-normal pull-left" src="https://randomuser.me/api/portraits/women/81.jpg"
+            <div class="col-2">
+              <img class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg"
               alt="profile-image" />
-            <p class="card-text event-summary">
-              <!-- Repost Summary here. No  -->
-            </p>
+            </div>
+            
+            <div class="col-10 p-1">
+              <p class="card-text event-summary">
+                <!-- Repost Summary here. No  -->
+                this
+              </p>
+              
+            </div>
+            
+            
           </div>
           <div class="block" style="display:none"></div>
         </div>
