--- a/GalaX/board/templates/board/comment_template.html
+++ b/GalaX/board/templates/board/comment_template.html
@@ -1,12 +1,15 @@
-<div class="rounded border border-secondary m-1">
-  <!-- clearfix to allow stopping consecutive text to be around -->
-  <div class="event-repost clearfix">
+<div class="card">
+  <div class="event-repost row no-gutters">
     <!-- image -->
-    <img class="card-profile-normal pull-left" src="https://randomuser.me/api/portraits/women/81.jpg"
-      alt="profile-image" />
-    <p class="card-text event-summary">
-      <!-- Repost Summary here. No  -->
-    </p>
+    <div class="col-2">
+      <img class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg" alt="profile-image" />
+    </div>
+    <div class="col-10 p-1">
+      <p class="card-text event-summary">
+        <!-- Repost Summary here. No  -->
+        this
+      </p>
+    </div>
   </div>
   <div class="block" style="display:none"></div>
 </div>
