--- a/GalaX/board/templates/board/event_card.html
+++ b/GalaX/board/templates/board/event_card.html
@@ -43,6 +43,28 @@
             ..........
             ........
           </p>
+          <div class="grid-comment mt-2">
+            <div class="card">
+              <div class="event-repost row no-gutters">
+                <!-- image -->
+                <div class="col-2">
+                  <img class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg"
+                  alt="profile-image" />
+                </div>
+                
+                <div class="col-10 p-1">
+                  <p class="card-text event-summary">
+                    <!-- Repost Summary here. No  -->
+                    this
+                  </p>
+                  
+                </div>
+                
+                
+              </div>
+              <div class="block" style="display:none"></div>
+            </div>
+          </div>
           <div class="event-comment-hide mt-2">
             <textarea class="event-comment-content form-control" rows="6" placeholder="请输入评论"></textarea>
           </div>
