--- a/GalaX/board/templates/board/event_card.html
+++ b/GalaX/board/templates/board/event_card.html
@@ -48,7 +48,7 @@
               <div class="event-repost row no-gutters">
                 <!-- image -->
                 <div class="col-2">
-                  <img class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg"
+                  <img id="1" class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg"
                   alt="profile-image" />
                 </div>
                 
