--- a/GalaX/board/static/board/css/board_base.css
+++ b/GalaX/board/static/board/css/board_base.css
@@ -96,3 +96,5 @@ box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
 }
 
+/* Disable dropdown arrow */
+.dropdown-toggle:after { content: none }
