--- a/GalaX/board/templates/board/comment_template.html
+++ b/GalaX/board/templates/board/comment_template.html
@@ -1,14 +1,17 @@
-<div class="card">
-  <div class="event-repost row no-gutters">
+<!-- If top level comment: m-1 -->
+<div class="card grid-comment-item px-0">
+  <div class="row no-gutters">
     <!-- image -->
     <div class="col-2">
-      <img class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg" alt="profile-image" />
+      <!-- id = owner_id -->
+      <img id="..." class="card-profile-normal" src="https://randomuser.me/api/portraits/women/81.jpg" alt="profile-image" />
     </div>
     <div class="col-10 p-1">
       <p class="card-text event-summary">
         <!-- Repost Summary here. No  -->
         this
       </p>
+      <!-- sub comment -->
     </div>
   </div>
   <div class="block" style="display:none"></div>
