All basics finished, except find by friend
1. Repost, like, comment
2. render cards. card dynamics
3. Function card to change by category

--- a/GalaX/board/templates/board/comment_template.html
+++ b/GalaX/board/templates/board/comment_template.html
@@ -9,7 +9,7 @@
     <div class="col-10 p-1">
       <p class="card-text event-summary">
         <!-- Repost Summary here. No  -->
-        this
+        <small class="text-muted">@fir: </small>this
       </p>
       <!-- sub comment -->
     </div>
