--- a/GalaX/board/templates/board/event_card.html
+++ b/GalaX/board/templates/board/event_card.html
@@ -1,5 +1,5 @@
 <!-- Templates -->
-<div class="grid-item col-md-3 col-sm-4 col-xs-6">
+<div id='1' class="grid-item col-md-3 col-sm-4 col-xs-6">
   <div class="grid-content card mx-1 my-4">
     <div class="grid-sense">
       <div class="event-meta" style="visibility:hidden; height:0;">
@@ -13,10 +13,10 @@
         alt="Card image cap" />
       <img class="card-profile event-profile mt-n5 mx-4" src="https://randomuser.me/api/portraits/women/81.jpg"
         alt="profile-image" />
-      <div class="event-display card-body">
+      <div class="event-display card-body pt-0">
         <h5 class="card-title event-name">
           <!-- Name here -->
-          Myname
+          Myname <small class="text-muted">@ Username</small>
         </h5>
         <p class="card-text event-summary">
           <!-- Summary here -->
