--- a/GalaX/board/templates/board/board_base.html
+++ b/GalaX/board/templates/board/board_base.html
@@ -1,48 +1,45 @@
-{% extends 'base.html' %} <!--baseline for board app-->
+{% extends 'base.html' %}
+<!--baseline for board app-->
 
 {% load staticfiles %}
 
 {% block title %}
-    地图
+广场 - GalaX
 {% endblock %}
 
 {% block css %}
 
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
 
-    <!-- general css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'map/css/my_card.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'contextmenu\jquery.contextMenu.min.css' %}">
+<!-- general css -->
+<link rel="stylesheet" type="text/css" href="{% static 'map/css/my_card.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'contextmenu\jquery.contextMenu.min.css' %}">
 
-    <!-- Fontawesome -->
-    <script defer src="{% static 'fontawesome-free-5.8.1-web/js/all.min.js' %}"></script>
-    <!-- 使用buttons字体图标时才需要加载 Font-Awesome -->
-    <link href="{% static 'fontawesome-free-5.8.1-web/css/all.min.css' %}" rel="stylesheet">
+<!-- Fontawesome -->
+<script defer src="{% static 'fontawesome-free-5.8.1-web/js/all.min.js' %}"></script>
+<!-- 使用buttons字体图标时才需要加载 Font-Awesome -->
+<link href="{% static 'fontawesome-free-5.8.1-web/css/all.min.css' %}" rel="stylesheet">
 
 
-    <style>
-        body, html {height: 100%;}
-    </style>
+<style>
+    body,
+    html {
+        height: 100%;
+    }
+</style>
 
-    <!-- board_base.css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'board/css/board_base.css' %}">
+<!-- board_base.css -->
+<link rel="stylesheet" type="text/css" href="{% static 'board/css/board_base.css' %}">
 
-    
+
 {% endblock %}
 
 {% block content %}
 <div class="container-fluid">
-  <div class="row grid">
-    {% include 'board/function_card.html' %}
-    {% include 'board/repost_event_card.html' %}
-    {% include 'board/event_card.html' %}
-    {% include 'board/event_card.html' %}
-    {% include 'board/event_card.html' %}
-    {% include 'board/event_card.html' %}
-    {% include 'board/event_card.html' %}
+    <div class="row grid">
+        {% include 'board/function_card.html' %}
 
-
-    
+    </div>
 </div>
 
 <!-- Masonary and contextmenu -->
@@ -56,6 +53,3 @@
 <script type="module" src="{% static 'board/js/refresh.js'%}"></script>
 <script type="module" src="{% static 'board/js/render.js'%}"></script>
 {% endblock %}
-
-
-
