--- a/GalaX/board/templates/board/function_card.html
+++ b/GalaX/board/templates/board/function_card.html
@@ -1,5 +1,6 @@
-<!-- Templates -->
-<div id="function_card" class="position-fixed fixed-bottom col-md-3 col-sm-3 col-lg-3">
+<!-- Templates: TODO: the z-index -->
+<div id="function_card" class="position-fixed fixed-bottom 
+col-md-3 col-sm-3 col-lg-3" style="z-index: 2000"> 
   <div class="grid-content card mx-1 my-4">
     <div class="grid-sense">
       <!-- Usually shown -->
@@ -10,7 +11,7 @@
           <select id="event-filter" class="form-control d-inline m-1 col-6">
             <option selected="selected">这里</option>
             <option>朋友</option>
-            <option>热点</option>
+            <!-- <option>热点</option> -->
             <option>自己</option>
           </select>
         </div>
