finish main function

--- a/GalaX/login/templates/login/logintemplate.html
+++ b/GalaX/login/templates/login/logintemplate.html
@@ -13,13 +13,17 @@
     .errorlist {
         color: red;
     }
+    body{      
+        background-image: url({% static 'image/galax6.jpg' %});      
+        background-size:cover;    
+     } 
 </style>
 {% endblock %}
 
 
 {% block content %}
 
-<body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
+
     <div>
             <br><br><br>
         </div>
