--- a/GalaX/user_information/templates/UserInformation/profile_edit.html
+++ b/GalaX/user_information/templates/UserInformation/profile_edit.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block title %} 用户信息修改 {% endblock title %}
+{% block css %}
+<style type="text/css">
 
+    </style>
+{% endblock %}
 
 
 {% block content %}
@@ -31,7 +35,7 @@
                 <div class="panel-body"><a href="http://bootnipets.com">bootnipets.com</a></div>
             </div>
 -->
-
+<!--
             <ul class="list-group">
                 <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong>Shares</strong></span> 125
@@ -41,6 +45,7 @@
                 <li class="list-group-item text-right"><span class="pull-left"><strong>Followers</strong></span> 78
                 </li>
             </ul>
+            -->
             <!--
             <div class="panel panel-default">
                 <div class="panel-heading">Social Media</div>
