--- a/GalaX/templates/nav.html
+++ b/GalaX/templates/nav.html
@@ -11,8 +11,9 @@
         <a class="nav-link" href="/index/">主页 <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/board/">微博广场</a>
       </li>
+      <!--
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
@@ -25,10 +26,18 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      -->
+      <form class="form-inline my-2 my-lg-0" action="{% url 'search'%}">
+          
+          <input type="text" 
+              class="form-control mr-sm-2" 
+              name="search" 
+              placeholder="搜索微博" 
+              required
+          >
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
       </form>
+
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
@@ -44,11 +53,9 @@
             <li><a class="nav-link" href="{% url 'profile_view' id=request.session.user_id %}">个人信息查看</a></li>
             <li><a class="nav-link" href="{% url 'profile_edit' id=request.session.user_id %}">个人信息修改</a></li>
             <li><a class="nav-link" href="/passchg/">修改密码</a></li>
-            <li><a class="nav-link" href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a class="nav-link" href="#">Separated link</a></li>
+            <li><a class="nav-link" href="/logout/">登出</a></li>
           </ul>
-        <li class="nav-item active"><a class="nav-link" href="/logout/">登出</a></li>
+        
         </li>
         {% else %}
         <li class="nav-item active"><a class="nav-link" href="/login/">登录</a></li>
