--- a/GalaX/user_information/templates/UserInformation/profile_view.html
+++ b/GalaX/user_information/templates/UserInformation/profile_view.html
@@ -518,7 +518,7 @@
                                         </div>
                                         <!-- 注脚 -->
                                         <div class="card-footer">
-                                            <a href="#" class="btn btn-primary">阅读详情</a>
+                                            <a href="/board/to_event" class="btn btn-primary">阅读详情</a>
                                         </div>
                                     </div>
                                 </div>
@@ -626,7 +626,7 @@
                                         </div>
                                         <!-- 注脚 -->
                                         <div class="card-footer">
-                                            <a href="#" class="btn btn-primary">阅读详情</a>
+                                            <a href="/board/to_event" class="btn btn-primary">阅读详情</a>
                                         </div>
                                     </div>
                                 </div>
@@ -733,7 +733,7 @@
                                         </div>
                                         <!-- 注脚 -->
                                         <div class="card-footer">
-                                            <a href="#" class="btn btn-primary">阅读详情</a>
+                                            <a href="/board/to_event" class="btn btn-primary">阅读详情</a>
                                         </div>
                                     </div>
                                 </div>
