转发表修改

--- a/GalaX/login/templates/login/search.html
+++ b/GalaX/login/templates/login/search.html
@@ -15,6 +15,7 @@
 
 <div class="container">
     <!-- 修改，面包屑的href增加search参数 -->
+    <!--热门与最新，先去掉
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
@@ -29,7 +30,7 @@
             </li>
         </ol>
     </nav>
-
+-->
 
     <!-- 新增，搜索提示语 -->
     {% if search %}
